Format better human readable output descriptions

BUG: 473338


(cherry picked from commit a428032f5e591a48105eeeb7044f6f7ecae639ef)